# harbor

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conda-lock.yml  conf.py  cookiecutter.json  environment.yml  index.md  mkdocs.yml  pixi.toml  pyproject.toml
01-management/: README.md
02-methods/: README.md
03-data/: README.md
03-data/001-example/: README.md
04-analysis/: README.md
05-figures/: README.md
06-dissemination/: README.md
07-misc/: README.md
docs/: index.md
docs/css/: colors.css  progress-bar.css
hooks/: post_gen_project.py
website/source/: conf.py  documentation.md  environment.md  index.md  setting-up-environment.md
{{ cookiecutter.project_name }}/: .gitignore  Makefile  README.md  index.md  mkdocs.yml  pixi.toml  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: codecov.yml  deploy-docs.yml
{{ cookiecutter.project_name }}/.obsidian/: .gitignore  app.json  hotkeys.json
{{ cookiecutter.project_name }}/.obsidian/plugins/: .gitignore
{{ cookiecutter.project_name }}/.obsidian/plugins/citater/: data.json
{{ cookiecutter.project_name }}/study/: .nav.yml  .pages
{{ cookiecutter.project_name }}/study/.overrides/: main.html
{{ cookiecutter.project_name }}/study/css/: base.css
{{ cookiecutter.project_name }}/study/data/: .nav.yml  README.md
{{ cookiecutter.project_name }}/study/dissemination/: README.md
{{ cookiecutter.project_name }}/study/js/: mathjax.js
{{ cookiecutter.project_name }}/study/management/: README.md
{{ cookiecutter.project_name }}/study/management/meetings/: .nav.yml  .pages  YYYY-MM-DD.md
{{ cookiecutter.project_name }}/study/methods/: README.md
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: __init__.py
